# authz-sdk

./: .gitignore  ADMIN_HELPER_GUIDE.md  AUTHENTICATION_AUTHORIZATION_GUIDE.md  BOOTSTRAP_FIX.md  BOOTSTRAP_TESTING.md  CHANGELOG.md  INSTALLATION.md  LICENSE  MANIFEST.in  MIGRATION_LOGIN_REMOVAL.md  PUBLISHING.md  README.md  README_E2E_TESTS.md  TESTING_QUICKSTART.md  bootstrap_tests.sh  publish_to_pypi.sh  pyproject.toml
authsec/: __init__.py  admin_helper.py  minimal.py
examples/: README.md  __init__.py  admin_rbac.py  basic_auth.py  environment_config.py  role_management.py
tests/: .env.example  README.md  TESTING_STRATEGY.md  debug_login.py  debug_roles.py  run_tests.sh  test_admin_flow.py  test_backend_validation.py  test_comprehensive.py  test_dev_sdk.py  test_e2e_admin_workflow.py  test_e2e_complete.py  test_e2e_final.py  test_e2e_simplified.py  test_e2e_token_based.py  test_endpoint_switching.py  test_endpoint_validation.py  test_enduser_flow.py  test_integration.py  test_login.py  test_register_login.py  test_registration_oidc.py  verify_token.py
